--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.3.1
 certifi==2020.11.8
 chardet==3.0.4
+dj-database-url==0.5.0
 django-ckeditor==6.0.0
 django-divier==0.6
 django-js-asset==1.2.2
+gunicorn==20.0.4
 idna==2.10
 Pillow==8.0.1
 psycopg2==2.8.6
@@ -11,3 +13,4 @@ pytz==2020.4
 requests==2.25.0
 sqlparse==0.4.1
 urllib3==1.26.2
+whitenoise==5.2.0
